zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/reify_enum_with_duplicate_field.zig
export fn entry() void {
    const E = @Enum(u32, .nonexhaustive, &.{ "A", "A" }, &.{ 0, 1 });
    _ = @as(E, undefined);
}

// error
//
// :2:42: error: duplicate enum field 'A' at index '1'
// :2:42: note: previous field at index '0'
